tests/snapshots/sfc/ts/script_setup__array_with_as_const.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


type SortType = typeof SORT_TYPES[number]['value'];


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const SORT_TYPES = [
  { text: 'Latest', value: 'DESC' },
  { text: 'Oldest', value: 'ASC' }
] as const;
const sortType = ref<SortType>('DESC');

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(sortType.value), 1 /* TEXT */))
}
}

})
